added pynotebook for collab transformation work

--- a/scripts/jupiter_migration/Migration.ipynb
+++ b/scripts/jupiter_migration/Migration.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from config import sparqlTerms, mig_ns, sparql_mig_test, sparql_mig_simple, sparql_mig_dev\n",
+    "from config import sparqlTerms, mig_ns, sparql_mig_test, sparql_mig_simple, sparql_mig_dev, vocabs\n",
     "from transformation import TransformationFactory\n",
     "from SPARQLWrapper import JSON\n",
     "from utilities import removeNS, PrintException\n",
@@ -58,23 +58,52 @@
     "class Transformation():\n",
     "\t@staticmethod\n",
     "\tdef rdfsyntaxnstype(triple):\n",
-    "\t\ttriple['object']['value'] = \"I did something to this value\"\n",
-    "\t\ttriple['object']['type'] = \"string\"\n",
+    "\t\t# nothing yet\n",
     "\t\treturn [triple] # a list of triples, in case more triples must be added as a result of this operation\n",
-    "\n",
+    "        \n",
+    "    \n",
     "\t@staticmethod\n",
-    "\tdef subject(triple):\n",
-    "\t\ttriple['object']['value'] = \"this is no longer a subject\"\n",
+    "\tdef language(triple):\n",
+    "\t\t# normalize values and convert to URI (consult the \"vocabs\" variable from the config file (this folder))\n",
     "\t\treturn[triple]\n",
     "\n",
+    "\t@staticmethod\n",
+    "\tdef rights(triple):\n",
+    "\t\t# several different license values need to be coerced into one common value, this needs to be confirmed with leah before it is written\n",
+    "\t\treturn[triple]\n",
+    "\n",
+    "\t@staticmethod\n",
+    "\tdef type(triple):\n",
+    "        # if the the object is a thesis, we do not return dcterm:type, we return rdftype:thesis\n",
+    "        # else;\n",
+    "        # if article draft submitted, mint a bibo:status draft and bibo:status submitted predicate (obtained from profile.json)\n",
+    "        # Journal Article (Draft-Submitted) becomes \n",
+    "        # [\n",
+    "        # (resource <http://purl.org/ontology/bibo/status> <http://vivoweb.org/ontology/core#submitted>), \n",
+    "        # (resource <http://purl.org/ontology/bibo/status> <http://purl.org/ontology/bibo/status#draft>, \n",
+    "        # (resource <http://purl.org/dc/terms/type> http://purl.org/ontology/bibo/article)\n",
+    "        # ]\n",
+    "        #for all others, consult existing values, and consult the \"vocabs\" variable from the config file (this folder)\n",
+    "        \n",
+    "    <http://purl.org/ontology/bibo/status#published>\n",
+    "    <http://purl.org/ontology/bibo/status#draft)>\n",
+    "        \n",
+    "\t\treturn[triple]\n",
+    "\n",
+    "\t@staticmethod\n",
+    "\tdef institution(triple):\n",
+    "\t\t# convert university of alberta to <http://id.loc.gov/authorities/names/n79058482>\n",
+    "\t\treturn[triple]\n",
+    "\n",
+    "    \n",
     "class TransformationFactory():\n",
     "\t@staticmethod\n",
     "\tdef getTransformation(triple):\n",
     "\t\tfunction = re.sub(r'[0-9]+', '', triple['predicate']['value'].split('/')[-1].replace('#', '').replace('-', ''))\n",
     "\t\tif (function == \"rdfsyntaxnstype\"):\n",
     "\t\t\treturn Transformation().rdfsyntaxnstype(triple)\n",
-    "\t\telif (function == \"subject\"):\n",
-    "\t\t\treturn Transformation().subject(triple)\n",
+    "\t\telif (function == \"language\"):\n",
+    "\t\t\treturn Transformation().language(triple)\n",
     "\t\telse:\n",
     "\t\t\treturn [triple]"
    ]
