--- a/scripts/jupiter_migration/Migration.ipynb
+++ b/scripts/jupiter_migration/Migration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -40,16 +40,26 @@
     "        # approximately a thousand queries each are minted for thesis and for generic objects\n",
     "        # these queries are based on the first folder in the fedora pair tree\n",
     "   \n",
-    "        queryObject = QueryFactory.getMigrationQuery(ptype, sparqlData=sparql_mig_simple)\n",
+    "        queryObject = QueryFactory.getMigrationQuery(ptype, sparqlData=sparql_mig_test)\n",
     "        print('%s batch queries generated' % (ptype))\n",
     "        print('%i batch(es) of %s objects to be transformed' % (len(queryObject.queries), ptype))\n",
     "        i = 0\n",
-    "        for group in queryObject.queries.keys():\n",
-    "            i = i + 1\n",
-    "            DTO = DataFactory.getData(queryObject.queries[group], group, queryObject) # query, group, object\n",
-    "            DTO.transformData()\n",
-    "            print(\"%i of %i %s batches transformed\" % (i, len(queryObject.queries), ptype) )\n",
-    "        print(\"%s objects transformation completed\" % (ptype) )"
+    "        with concurrent.futures.ThreadPoolExecutor(max_workers=6) as executor:\n",
+    "            \n",
+    "            future_to_result = {executor.submit(parellelTransform, queryObject, group): group for group in queryObject.queries.keys()}\n",
+    "            for future in concurrent.futures.as_completed(future_to_result):\n",
+    "                result = future_to_result[future]\n",
+    "                try:\n",
+    "                    i = i + 1\n",
+    "                    future.result()\n",
+    "                    print(\"%i of %i %s batches transformed\" % (i, len(queryObject.queries), ptype) )\n",
+    "                except Exception:\n",
+    "                    PrintException()\n",
+    "        print(\"%s objects transformation completed\" % (ptype) )\n",
+    "\n",
+    "def parellelTransform(queryObject, group):\n",
+    "    DTO = DataFactory.getData(queryObject.queries[group], group, queryObject) # query, group, object\n",
+    "    DTO.transformData()\n"
    ]
   },
   {
@@ -62,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -414,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -453,15 +463,6 @@
     "        with open(self.filename, \"w+\") as f:\n",
     "            f.writelines(self.output)\n",
     "\n",
-    "        #with concurrent.futures.ThreadPoolExecutor(max_workers=6) as executor:\n",
-    "        #    future_to_result = {executor.submit(self.processResults, results, query): result for result in results}\n",
-    "        #    for future in concurrent.futures.as_completed(future_to_result):\n",
-    "        #        result = future_to_result[future]\n",
-    "        #        try:\n",
-    "        #            future.result()\n",
-    "        #        except Exception:\n",
-    "        #            PrintException()\n",
-    "\n",
     "class CollectionData(Data):\n",
     "    def __init__(self, q, group, sparqlData, sparqlTerms, ptype):\n",
     "        super().__init__(q, group, sparqlData, sparqlTerms, ptype)\n",
@@ -486,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -507,9 +508,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 59,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -517,21 +518,18 @@
     "    @staticmethod\n",
     "    def getData(query, group, queryObject):\n",
     "        \"\"\" returns a specified query object depending on the type passed in\"\"\"\n",
-    "        functions = {\"collection\": CollectionData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject.ptype), \n",
-    "                     \"community\": CommunityData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject.ptype), \n",
-    "                     \"thesis\": ThesisData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject.ptype), \n",
-    "                     \"generic\": GenericData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject.ptype), \n",
-    "                     \"batch\": BatchData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject.ptype)\n",
-    "                    }\n",
-    "        if queryObject.ptype in functions:\n",
-    "            return functions[queryObject.ptype]\n",
+    "        if queryObject.ptype == \"collection\": return CollectionData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject.ptype) \n",
+    "        elif queryObject.ptype == \"community\": return CommunityData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject.ptype) \n",
+    "        elif queryObject.ptype == \"thesis\": return ThesisData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject.ptype)\n",
+    "        elif queryObject.ptype == \"generic\": return GenericData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject.ptype)\n",
+    "        elif queryObject.ptype == \"batch\": return BatchData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject.ptype)\n",
     "        else:\n",
     "            return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -552,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -570,17 +568,28 @@
       "1 of 1 community batches transformed\n",
       "community objects transformation completed\n",
       "generic batch queries generated\n",
-      "1 batch(es) of generic objects to be transformed\n",
-      "1 of 1 generic batches transformed\n",
-      "generic objects transformation completed\n",
-      "thesis batch queries generated\n",
-      "1 batch(es) of thesis objects to be transformed\n",
-      "1 of 1 thesis batches transformed\n",
-      "thesis objects transformation completed\n",
-      "batch batch queries generated\n",
-      "1 batch(es) of batch objects to be transformed\n",
-      "1 of 1 batch batches transformed\n",
-      "batch objects transformation completed\n"
+      "248 batch(es) of generic objects to be transformed\n",
+      "1 of 248 generic batches transformed\n",
+      "2 of 248 generic batches transformed\n",
+      "3 of 248 generic batches transformed\n",
+      "4 of 248 generic batches transformed\n",
+      "5 of 248 generic batches transformed\n",
+      "6 of 248 generic batches transformed\n",
+      "7 of 248 generic batches transformed\n",
+      "8 of 248 generic batches transformed\n",
+      "9 of 248 generic batches transformed\n",
+      "10 of 248 generic batches transformed\n",
+      "11 of 248 generic batches transformed\n",
+      "12 of 248 generic batches transformed\n",
+      "13 of 248 generic batches transformed\n",
+      "14 of 248 generic batches transformed\n",
+      "15 of 248 generic batches transformed\n",
+      "16 of 248 generic batches transformed\n",
+      "17 of 248 generic batches transformed\n",
+      "18 of 248 generic batches transformed\n",
+      "19 of 248 generic batches transformed\n",
+      "20 of 248 generic batches transformed\n",
+      "21 of 248 generic batches transformed\n"
      ]
     }
    ],
