updates to migration routes

--- a/scripts/jupiter_migration/Migration.ipynb
+++ b/scripts/jupiter_migration/Migration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
     "        # approximately a thousand queries each are minted for thesis and for generic objects\n",
     "        # these queries are based on the first folder in the fedora pair tree\n",
     "   \n",
-    "        queryObject = QueryFactory.getMigrationQuery(ptype, sparqlData=sparql_mig_test)\n",
+    "        queryObject = QueryFactory.getMigrationQuery(ptype, sparqlData=sparql_mig_simple)\n",
     "        print('%s batch queries generated' % (ptype))\n",
     "        print('%i batch(es) of %s objects to be transformed' % (len(queryObject.queries), ptype))\n",
     "        i = 0\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -140,8 +140,22 @@
     "    ############################################################################\n",
     "\n",
     "    def institution(self, triple, ptype):\n",
-    "        # convert university of alberta to <http://id.loc.gov/authorities/names/n79058482>\n",
-    "        self.output.append(triple)\n",
+    "        self.output.append(\n",
+    "            {\n",
+    "            'subject': {\n",
+    "                'value': triple['subject']['value'], \n",
+    "                'type': 'uri'\n",
+    "            }, \n",
+    "            'predicate': {\n",
+    "                'value': triple['predicate']['value'], \n",
+    "                'type': 'uri'\n",
+    "            }, \n",
+    "            'object': {\n",
+    "                'value': 'http://id.loc.gov/authorities/names/n79058482', \n",
+    "                'type': 'uri'\n",
+    "            }\n",
+    "        }\n",
+    "        )\n",
     "        return self.output\n",
     " \n",
     "\n",
@@ -201,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -213,6 +227,8 @@
     "        self.mapping = []\n",
     "        self.sparqlTerms = SPARQLWrapper(sparqlTerms)  # doesn't need to change (the terms store doesn't change)\n",
     "        self.sparqlData = SPARQLWrapper(sparqlData)  # sets the triple store from which to get data (simple, test, or dev)\n",
+    "        self.sparqlTerms.setMethod(\"POST\")\n",
+    "        self.sparqlData.setMethod(\"POST\")\n",
     "        self.endpoint = sparqlData\n",
     "        self.queries = {}\n",
     "        self.splitBy = {}\n",
@@ -354,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -376,7 +392,6 @@
     "        \n",
     "\n",
     "    def transformData(self):\n",
-    "        self.sparqlData.setMethod(\"GET\")\n",
     "        self.sparqlData.setReturnFormat(JSON)\n",
     "        self.sparqlData.setQuery(self.q)\n",
     "        # queries a batch of resources from this particular \"group\"\n",
@@ -420,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -441,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -462,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -477,17 +492,45 @@
     "        elif function == \"type\": return Transformation().type(triple, ptype)\n",
     "        elif function ==  \"rights\": return Transformation().rights(triple, ptype)\n",
     "        elif function == \"license\": return Transformation().license(triple, ptype)\n",
+    "        elif function == \"ontologyinstitution\": return Transformation().institution(triple, ptype)\n",
     "        else:\n",
     "            return [triple]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "collection batch queries generated\n",
+      "1 batch(es) of collection objects to be transformed\n",
+      "1 of 1 collection batches transformed\n",
+      "collection objects transformation completed\n",
+      "community batch queries generated\n",
+      "1 batch(es) of community objects to be transformed\n",
+      "1 of 1 community batches transformed\n",
+      "community objects transformation completed\n",
+      "generic batch queries generated\n",
+      "1 batch(es) of generic objects to be transformed\n",
+      "1 of 1 generic batches transformed\n",
+      "generic objects transformation completed\n",
+      "thesis batch queries generated\n",
+      "1 batch(es) of thesis objects to be transformed\n",
+      "1 of 1 thesis batches transformed\n",
+      "thesis objects transformation completed\n",
+      "batch batch queries generated\n",
+      "1 batch(es) of batch objects to be transformed\n",
+      "1 of 1 batch batches transformed\n",
+      "batch objects transformation completed\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "\tmain()"
