--- a/scripts/jupiter_migration/Migration.ipynb
+++ b/scripts/jupiter_migration/Migration.ipynb
@@ -109,6 +109,11 @@
     "    ############################################################################\n",
     "        \n",
     "    def rdfsyntaxnstype(self, triple, ptype):\n",
+    "        \n",
+    "        ### this is an important transformation:\n",
+    "        \n",
+    "                # \n",
+    "        \n",
     "        self.output.append(triple)\n",
     "        return self.output\n",
     "\n",
@@ -376,7 +381,27 @@
     "        self.getSplitBy()\n",
     "        for group in self.splitBy.keys():\n",
     "            self.queries[group] = \"%s %s %s FILTER (contains(str(?resource), '%s')) . ?resource dcterm:type ?type . ?resource ?predicate ?object . FILTER (?object!='') }\" % (self.prefixes, self.construct, self.where, self.splitBy[group])\n",
-    "        self.writeQueries()            "
+    "        self.writeQueries()\n",
+    "\n",
+    "\n",
+    "class Technical(Query):\n",
+    "    # queries remaining fedora objects that do not fall into the above model (i.e. characterization, foxml, etc.)\n",
+    "    def __init__(self, sparqlData):\n",
+    "        self.ptype = 'technical'\n",
+    "        self.construct = \"CONSTRUCT { ?resource rdf:type <http://www.w3.org/ns/ldp#NonRDFSource>; ?predicate object\"\n",
+    "        self.where = \"WHERE { ?resource rdf:type <http://www.w3.org/ns/ldp#NonRDFSource>; ?predicate object\"\n",
+    "        self.select = \"SELECT distinct ?resource WHERE  {?resource rdf:type <http://www.w3.org/ns/ldp#NonRDFSource> } \"\n",
+    "        super().__init__(self.ptype, sparqlData)\n",
+    "    \n",
+    "    \n",
+    "    # probably need to split queries first by characterization, content, erastats, and fedorafoxml\n",
+    "    # then split by pair tree\n",
+    "    # maybe create children for each type (chars, content, etc.)\n",
+    "    def generateQueries(self):\n",
+    "        self.getSplitBy()\n",
+    "        for group in self.splitBy.keys():\n",
+    "            self.queries[group] = \"%s %s %s FILTER (contains(str(?resource), '%s')) . ?resource dcterm:type ?type . ?resource ?predicate ?object . FILTER (?object!='') }\" % (self.prefixes, self.construct, self.where, self.splitBy[group])\n",
+    "        self.writeQueries()    "
    ]
   },
   {
@@ -449,7 +474,10 @@
     "class BatchData(Data):\n",
     "    def __init__(self, q, group, sparqlData, sparqlTerms, ptype):\n",
     "        super().__init__(q, group, sparqlData, sparqlTerms, ptype)\n",
-    "            "
+    "\n",
+    "class TechnicalData(Data):\n",
+    "    def __init__(self, q, group, sparqlData, sparqlTerms, ptype):\n",
+    "        super().__init__(q, group, sparqlData, sparqlTerms, ptype)"
    ]
   },
   {
@@ -469,6 +497,7 @@
     "        elif ptype == \"thesis\": return Thesis(sparqlData)\n",
     "        elif ptype == \"generic\": return Generic(sparqlData)\n",
     "        elif ptype == \"batch\": return Batch(sparqlData)\n",
+    "        elif ptype == \"technical\": return Technical(sparqlData)\n",
     "        else:\n",
     "            return None"
    ]
@@ -490,6 +519,7 @@
     "        elif queryObject.ptype == \"thesis\": return ThesisData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject)\n",
     "        elif queryObject.ptype == \"generic\": return GenericData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject)\n",
     "        elif queryObject.ptype == \"batch\": return BatchData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject)\n",
+    "        elif queryObject.ptype == \"technical\": return TechnicalData(query, group, queryObject.sparqlData, queryObject.sparqlTerms, queryObject)\n",
     "        else:\n",
     "            return None"
    ]
@@ -559,9 +589,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -573,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
