CSV - accepted values

--- a/data_dictionary/scripts/lib/Excel.ipynb
+++ b/data_dictionary/scripts/lib/Excel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 469,
    "metadata": {
     "scrolled": true
    },
@@ -31,16 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 310,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "class Excelx:\n",
     "\n",
-    "    def __init__(self, profile):data[key][title]\n",
+    "    def __init__(self, profile):\n",
     "        self.profile = profile\n",
     "        self.headings= []\n",
     "        \n",
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 468,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,48 +82,68 @@
     "            wb = Workbook()\n",
     "            wb = openpyxl.load_workbook('profiles.xlsx')\n",
     "            self.writeNamespaces(wb)\n",
+    "            sheet1 = wb.create_sheet(title = 'Accepted_Values')\n",
     "            sheet = wb.create_sheet(title = self.profile)\n",
     "            data = json.load(data_file)\n",
+    "            index = 1\n",
+    "            startrow = 2\n",
     "            for i, key in enumerate(data.keys()):\n",
     "                sheet['A' + str(i+2)] = key\n",
     "                self.headings = self.getHeadings(data, key)\n",
     "                for x, title in enumerate(self.headings):\n",
     "                    col = get_column_letter(x+2)\n",
-    "                    sheet[str(col)+str(1)] = title.replace('http://terms.library.ualberta.ca/', '')\n",
+    "                    sheet[str(col)+str(1)] = title.replace('http://terms.library.ualberta.ca/', '')                    \n",
     "                    if title in data[key].keys():\n",
     "                        for items in data[key][title]:\n",
     "                            sheet[str(col)+str(i+2)] = str(items)\n",
     "                        for namespace in namespaces:\n",
+    "                            # remove namespace uris\n",
     "                            if str(namespace['uri']) in str(data[key][title]):\n",
     "                                for items in data[key][title]:\n",
     "                                    cell = str(items).replace(namespace['uri'], namespace['prefix'] + ' : ')\n",
     "                                    sheet[str(col)+str(i+2)] = cell \n",
     "                        try:\n",
     "                            if type(data[key][title][0]) is dict:\n",
-    "                                style = Alignment(wrap_text=True)\n",
+    "                                # this will write the list of accepted values in a multiline cell\n",
+    "                                '''style = Alignment(wrap_text=True)\n",
     "                                celll = sheet[str(col)+str(i+2)]\n",
-    "                                celll.alignment = style\n",
+    "                                celll.alignment = styledata[key][title]\n",
     "                                length = len(data[key][title])\n",
     "                                cellvalue = []\n",
     "                                for subs in range(0, length-1):\n",
     "                                    for ke in data[key][title][subs].keys():\n",
     "                                        cellvalue.append(str(ke) + \" : \" + str(data[key][title][subs][ke]) + \" | \")\n",
     "                                    cellvalue.append(\"\\n\")\n",
-    "                                string= \"\"\n",
-    "                                for item in cellvalue:\n",
-    "                                    string = string + str(item) + \" \"\n",
-    "                                sheet[str(col)+str(i+2)] = str(string)\n",
+    "                                    string= \"\"\n",
+    "                                    for item in cellvalue:\n",
+    "                                        string = string + str(item) + \" \"\n",
+    "                                    sheet[str(col)+str(i+2)] = str(string)'''\n",
+    "                                # this will write the accepted values in a new sheet\n",
+    "                                ws = wb.worksheets[1]\n",
+    "                                ws['A'+str(startrow)] = str(key)\n",
+    "                                for h, ke in enumerate(data[key][title][0].keys()):\n",
+    "                                    col = get_column_letter(h+2)\n",
+    "                                    ws[str(col)+str(1)] = str(ke)\n",
+    "                                    length = len(data[key][title])\n",
+    "                                    for subs in range(0, length):\n",
+    "                                        ws[str(col)+str(startrow + subs)] = str(data[key][title][subs][ke])\n",
+    "                                startrow = startrow + length\n",
     "                        except Exception:\n",
     "                            continue       \n",
     "                    else: \n",
     "                        sheet[str(col)+str(i+2)] = \"N/A\"\n",
     "            names = wb.get_sheet_names()\n",
     "            for name in names:\n",
-    "                if name in ['community', 'collection', 'generic', 'thesis', 'Namespaces']:\n",
+    "                if name in ['community', 'collection', 'generic', 'thesis', 'Namespaces', 'Accepted_Values']:\n",
     "                    continue\n",
     "                else:\n",
     "                    std=wb.get_sheet_by_name(name)\n",
     "                    wb.remove_sheet(std)\n",
+    "            sheet.column_dimensions[\"A\"].width = 60.0\n",
+    "            for colname in range(2, 19):\n",
+    "                column = get_column_letter(colname)\n",
+    "                sheet.column_dimensions[column].width = 30.0\n",
+    "            sheet1.column_dimensions[\"A\"].width = 60.0\n",
     "            wb.save('profiles.xlsx')\n",
     "            \n",
     "    def getHeadings(self, data, key):\n",
@@ -140,7 +159,7 @@
     "        self.sheet = self.wb.create_sheet(title = 'Namespaces')\n",
     "        for z, names in enumerate(namespaces):\n",
     "            self.sheet['A'+str(z+1)] = str(names['prefix'])\n",
-    "            self.sheet['B'+str(z+1)] = str(names['uri'])"
+    "            self.sheet['B'+str(z+1)] = str(names['uri'])       "
    ]
   },
   {
