--- a/scripts/jupiter_migration/Dates/Dates.ipynb
+++ b/scripts/jupiter_migration/Dates/Dates.ipynb
@@ -526,21 +526,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-c2a49f50cce2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0msubs\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdate_from_title\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0msubject\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'subject'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0msubject\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdates\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'subjects'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'values'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m         \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dates = [{\"subject\" : \"\", \"predicate\" : \"\", \"object\" : \"\"}]\n",
     "subjects =[]\n",
@@ -549,7 +537,7 @@
     "    subjects.append(subs[\"subject\"])\n",
     "for subs in date_from_title:\n",
     "    subject = subs['subject']\n",
-    "    if subject in dates['subjects']['values']:\n",
+    "    if subject in subjects:\n",
     "        continue\n",
     "    else:\n",
     "        dates.append(subs)\n",
@@ -563,8 +551,12 @@
     "        subjects.append(subject)\n",
     "del dates[0]\n",
     "with open(\"dates.py\", \"a\") as output:\n",
-    "    output.write(\"dates = \")\n",
-    "    output.write(json.dumps(dates))\n",
+    "    output.write(\"dates = [\")\n",
+    "    for subs in dates:\n",
+    "        output.write(str(subs))\n",
+    "        output.write(\",\")\n",
+    "    output.write(\"]\")\n",
+    "        \n",
     "        \n",
     "            "
    ]
