--- a/scripts/jupiter_migration/Dates/Dates.ipynb
+++ b/scripts/jupiter_migration/Dates/Dates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "from Supplementary_Thesis_Materials import Supplementary_Thesis_Materials\n",
     "from BryanGruhn import BryanGruhn\n",
     "from isVerOf import date_from_isVersionOf\n",
+    "from Filename import Filename\n",
     "from SPARQLWrapper import JSON, SPARQLWrapper\n",
     "import re, os, json, requests\n",
     "import nltk\n",
@@ -107,8 +108,30 @@
     "                resource = triple['s']['value']\n",
     "                year = text.replace('.', ' ').replace('-', ' ').split(' ')\n",
     "                if int(year[0]) > 1900 and int(year[0]) < 2018:\n",
-    "                    p.write('{\"subject\": ' + '\"' + resource + '\",' + \"\\n\" + '\"predicate\": \"http://purl.org/dc/terms/created\"' + ',' + \"\\n\" + '\"object\" :' + '\"' + year[0] + '\"' + \"},\" + \"\\n\")\n",
-    "            p.writelines(']') \n",
+    "                    p.write('{\"subject\": ' + '\"' + resource + '\",' + \"\\n\" + '\"predicate\": \"http://purl.org/dc/terms/created\"' + ',' + \"\\n\" + '\"object\" :' + '[\"' + year[0] + '\"]' + \"},\" + \"\\n\")\n",
+    "            p.writelines(']')\n",
+    "            \n",
+    "    def Filename(self):\n",
+    "        self.sparql.setMethod(\"POST\")\n",
+    "        self.sparql.setReturnFormat(JSON)\n",
+    "        query = \"prefix uald: <http://terms.library.ualberta.ca/date/> prefix dcterm: <http://purl.org/dc/terms/> prefix ual: <http://terms.library.ualberta.ca/identifiers/> select ?s ?collection ?file where {?s ual:hasCollection ?collection . ?s <info:fedora/fedora-system:def/model#downloadFilename> ?file . ?s dcterm:created ?created . filter(?file != '' && ?created = '' && ?collection != 'Dr. Otto Schaefer Collection' && ?collection != 'Supplementary Thesis Materials' && ?collection != 'Theses and Dissertations' && ?collection != 'Bryan/Gruhn Archaeology Collection')} \"\n",
+    "        self.sparql.setQuery(query)\n",
+    "        r  = self.sparql.query().convert()['results']['bindings']\n",
+    "        for triple in r:\n",
+    "            text = triple['file']['value'].replace('_', ' ').replace('-', ' ').replace('/', ' ').replace('.', ' ')\n",
+    "            resource = triple['s']['value']\n",
+    "            tokens = word_tokenize(text)\n",
+    "            for n,i in enumerate(tokens):\n",
+    "                if i == \",\" :\n",
+    "                    del tokens[n]\n",
+    "                if i == \")\" :\n",
+    "                    del tokens[n]\n",
+    "                if i == \"(\" :\n",
+    "                    del tokens[n]\n",
+    "            years = Word(tokens)\n",
+    "            trans = years.getyear()\n",
+    "            yyyy = Search(trans, resource)\n",
+    "            yyyy.con()\n",
     "            \n",
     "    def supplThesisMat(self):\n",
     "        self.sparql.setMethod(\"POST\")\n",
@@ -173,12 +196,6 @@
     "                if i == \"(\" :\n",
     "                    del tokens[n]\n",
     "            years = Word(tokens)\n",
-    "            #yearday = years.getyday()\n",
-    "            #if yearday == None:\n",
-    "                # if a yyyy/mm/dd was not found search for other types of dates\n",
-    "             #   yearmonth = years.getymonth()\n",
-    "              #  if yearmonth == None:\n",
-    "                    # if a yyyy/mm was not found search for other types of dates\n",
     "            trans = years.getyear()\n",
     "            yyyy = Search(trans, resource)\n",
     "            yyyy.con()"
@@ -312,7 +329,7 @@
     "        \n",
     "    def con(self):\n",
     "        # change year format to mm/dd/year\n",
-    "        with open(\"Titles.py\", \"a\") as outfile:\n",
+    "        with open(\"FileName.py\", \"a\") as outfile:\n",
     "            if type(self.trans) == list:\n",
     "                outfile.write('{\"subject\" : ' + '\"' + self.resource + '\",')\n",
     "                outfile.write(\"\\n\")\n",
@@ -364,7 +381,7 @@
    "outputs": [],
    "source": [
     "dates = Query(1, 1)\n",
-    "extracts = dates.titleExtract()"
+    "extracts = dates.BryanGruhn()"
    ]
   },
   {
@@ -465,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +543,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for sub in Filename:\n",
+    "    subject = sub['subject']\n",
+    "    date = sub['object']\n",
+    "    sparql = SPARQLWrapper(sparql_mig_dev)\n",
+    "    sparql.setMethod(\"POST\")\n",
+    "    sparql.setReturnFormat(JSON)\n",
+    "    query = \"prefix uald: <http://terms.library.ualberta.ca/date/> prefix dcterm: <http://purl.org/dc/terms/> prefix ual: <http://terms.library.ualberta.ca/identifiers/> select ?collection ?file where {<%s> ual:hasCollection ?collection . <%s> <info:fedora/fedora-system:def/model#downloadFilename> ?file}\" % (subject, subject)\n",
+    "    sparql.setQuery(query)\n",
+    "    r  = sparql.query().convert()['results']['bindings']\n",
+    "    with open('date_from_filename.tsv', 'a') as p:\n",
+    "        for triple in r:\n",
+    "            p.write(subject + \" \\t \" + triple['collection']['value'] + \" \\t \" + triple['file']['value'].replace(\"\\n\", ' ') + \"\\t\" + str(date) + \" \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,12 +588,20 @@
     "    else:\n",
     "        dates.append(subs)\n",
     "        subjects.append(subject)\n",
+    "for subs in Filename:\n",
+    "    subject = subs['subject']\n",
+    "    if subject in subjects:\n",
+    "        continue\n",
+    "    else:\n",
+    "        dates.append(subs)\n",
+    "        subjects.append(subject)\n",
     "del dates[0]\n",
     "with open(\"dates.py\", \"a\") as output:\n",
     "    output.write(\"dates = [\")\n",
     "    for subs in dates:\n",
     "        output.write(str(subs))\n",
     "        output.write(\",\")\n",
+    "        output.write(\"\\n\")\n",
     "    output.write(\"]\")\n",
     "        \n",
     "        \n",
