--- a/scripts/jupiter_migration/Dates/Dates.ipynb
+++ b/scripts/jupiter_migration/Dates/Dates.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 11,
-=======
    "execution_count": 1,
->>>>>>> data_dictionary_update
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +11,7 @@
     "from Supplementary_Thesis_Materials import Supplementary_Thesis_Materials\n",
     "from BryanGruhn import BryanGruhn\n",
     "from isVerOf import date_from_isVersionOf\n",
-<<<<<<< HEAD
-=======
     "from Filename import Filename\n",
->>>>>>> data_dictionary_update
     "from SPARQLWrapper import JSON, SPARQLWrapper\n",
     "import re, os, json, requests\n",
     "import nltk\n",
@@ -115,10 +108,6 @@
     "                resource = triple['s']['value']\n",
     "                year = text.replace('.', ' ').replace('-', ' ').split(' ')\n",
     "                if int(year[0]) > 1900 and int(year[0]) < 2018:\n",
-<<<<<<< HEAD
-    "                    p.write('{\"subject\": ' + '\"' + resource + '\",' + \"\\n\" + '\"predicate\": \"http://purl.org/dc/terms/created\"' + ',' + \"\\n\" + '\"object\" :' + '\"' + year[0] + '\"' + \"},\" + \"\\n\")\n",
-    "            p.writelines(']') \n",
-=======
     "                    p.write('{\"subject\": ' + '\"' + resource + '\",' + \"\\n\" + '\"predicate\": \"http://purl.org/dc/terms/created\"' + ',' + \"\\n\" + '\"object\" :' + '[\"' + year[0] + '\"]' + \"},\" + \"\\n\")\n",
     "            p.writelines(']')\n",
     "            \n",
@@ -143,7 +132,6 @@
     "            trans = years.getyear()\n",
     "            yyyy = Search(trans, resource)\n",
     "            yyyy.con()\n",
->>>>>>> data_dictionary_update
     "            \n",
     "    def supplThesisMat(self):\n",
     "        self.sparql.setMethod(\"POST\")\n",
@@ -208,15 +196,6 @@
     "                if i == \"(\" :\n",
     "                    del tokens[n]\n",
     "            years = Word(tokens)\n",
-<<<<<<< HEAD
-    "            #yearday = years.getyday()\n",
-    "            #if yearday == None:\n",
-    "                # if a yyyy/mm/dd was not found search for other types of dates\n",
-    "             #   yearmonth = years.getymonth()\n",
-    "              #  if yearmonth == None:\n",
-    "                    # if a yyyy/mm was not found search for other types of dates\n",
-=======
->>>>>>> data_dictionary_update
     "            trans = years.getyear()\n",
     "            yyyy = Search(trans, resource)\n",
     "            yyyy.con()"
@@ -350,11 +329,7 @@
     "        \n",
     "    def con(self):\n",
     "        # change year format to mm/dd/year\n",
-<<<<<<< HEAD
-    "        with open(\"Titles.py\", \"a\") as outfile:\n",
-=======
     "        with open(\"FileName.py\", \"a\") as outfile:\n",
->>>>>>> data_dictionary_update
     "            if type(self.trans) == list:\n",
     "                outfile.write('{\"subject\" : ' + '\"' + self.resource + '\",')\n",
     "                outfile.write(\"\\n\")\n",
@@ -406,11 +381,7 @@
    "outputs": [],
    "source": [
     "dates = Query(1, 1)\n",
-<<<<<<< HEAD
-    "extracts = dates.titleExtract()"
-=======
     "extracts = dates.BryanGruhn()"
->>>>>>> data_dictionary_update
    ]
   },
   {
@@ -511,11 +482,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 2,
-=======
    "execution_count": null,
->>>>>>> data_dictionary_update
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,11 +523,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 10,
-=======
    "execution_count": null,
->>>>>>> data_dictionary_update
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,9 +543,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 26,
-=======
    "execution_count": 3,
    "metadata": {
     "collapsed": true
@@ -605,8 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
->>>>>>> data_dictionary_update
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,6 +574,13 @@
     "for subs in BryanGruhn:\n",
     "    dates.append(subs)\n",
     "    subjects.append(subs[\"subject\"])\n",
+    "for subs in Supplementary_Thesis_Materials:\n",
+    "    subject = subs['subject']\n",
+    "    if subject in subjects:\n",
+    "        continue\n",
+    "    else:\n",
+    "        dates.append(subs)\n",
+    "        subjects.append(subject)\n",
     "for subs in date_from_title:\n",
     "    subject = subs['subject']\n",
     "    if subject in subjects:\n",
@@ -629,8 +595,6 @@
     "    else:\n",
     "        dates.append(subs)\n",
     "        subjects.append(subject)\n",
-<<<<<<< HEAD
-=======
     "for subs in Filename:\n",
     "    subject = subs['subject']\n",
     "    if subject in subjects:\n",
@@ -638,17 +602,13 @@
     "    else:\n",
     "        dates.append(subs)\n",
     "        subjects.append(subject)\n",
->>>>>>> data_dictionary_update
     "del dates[0]\n",
     "with open(\"dates.py\", \"a\") as output:\n",
     "    output.write(\"dates = [\")\n",
     "    for subs in dates:\n",
     "        output.write(str(subs))\n",
     "        output.write(\",\")\n",
-<<<<<<< HEAD
-=======
     "        output.write(\"\\n\")\n",
->>>>>>> data_dictionary_update
     "    output.write(\"]\")\n",
     "        \n",
     "        \n",
